--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -86,7 +86,7 @@
   name: Work on group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 12:00 TBD"
-  - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)
+  - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
   - name: "1:00 - 4:00 TBD"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours"
 
