--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -79,8 +79,107 @@ lunchtime talks:
 participants: 
   title: Participants
   people:
-    - name: Coming Soon!
+   - name: Luyi Adesanya 
+     image:
+     bio: "Originally from Dallas, Texas, I earned my bachelor’s degree in Biological Sciences (with a specialization in Endocrinology) from The University of Chicago. Prior to Washington University in St. Louis, I was working at The National Institutes of Health as an Intramural Research Fellow. With my MPH/MBA degrees in global health epidemiology and supply chain + operations, I am interested in the integration of preventative health and business on an international sector. Currently, as a PhD student, I am interested in Clinical Research and improving Clinical Trial diversity domestically and globally.  As a daughter of immigrants, from Germany and Nigeria, I am motivated to pursue a career that allows me to utilize data analytics to use health outcomes and strengthen health systems in emerging markets throughout the developing world."
+     
+   - name: Abiodun Atoloye
+     image:
+     bio: "Abiodun Atoloye is a Postdoctoral Research Associate with Rudd Center for Food Policy and Obesity, University of Connecticut. She studies the interactions between individual and environmental factors both as determinants of and solutions to poor nutrition outcomes using a mixed-method research approach, community-based research approach, geo-narrative, policy analyses, and innovative measurement tools. Her interest spans addressing access to affordable and nutritious food in different settings including the food pantry and banking system, farmers’ market, and family childcare homes. She is also interested in using advanced data analysis techniques as an alternative method to understand factors influencing food-related decisions among low-resource individuals."
+     
+   - name: Kimberley Baxter
+     image:
+     bio: "Kimberley Baxter (she/her/hers), is a rising fourth-year Ph.D. student in NYU’s Linguistics department. She earned two MA’s in Forensic Linguistics (Hofstra University) and in Sociolinguistics (University of Essex), and studied Spanish at NCA&T State University. Her current interests are Syntactic Variation in AAVE and Syntax in Jamaican Patwa."
+     
+   - name: Meredith Clark
+     image:
+     bio: "Meredith D. Clark, Ph.D., (@MeredithDClark; she/her/hers) is an assistant professor in Media Studies at the University of Virginia. Her research focuses on the intersections of race and power in news, digital, and social media. In 2015, Clark was named to The Root 100, an annual list of influential Black Americans, for her academic analysis of Black Twitter. Her book on Black Twitter and Black Digital Resistance is under contract with Oxford University Press. Her research has also been published in Communication & the Public, Communication, Culture & Critique, Electronic News, Journalism & Mass Communication Educator, Journal of Social Media in Society, New Media & Society, and Social Movement Studies. Clark is a 2020-2021 fellow with Data & Society, and a member of the Deliberative Media Lab at UVa. She is a faculty affiliate at the Center on Digital Culture and Society at the University of Pennsylvania. She also sits on the advisory boards for Project Information Literacy, the Center for Critical Race and Digital Studies at New York University, Report for America, and the Virginia Center for Investigative Journalism."
+     
+   - name: Richmond Danso
+     image: 
+     bio: "Richmond Danso is a 2020 Ph.D. graduate from the Department of Political Science at Howard University, where he majored in international relations and American Government (and minored in Public Policy). His research focuses on developing nations, particularly Sub-Saharan Africa, focusing on development, leadership, and good governance. He holds a master’s degree in Public Administration from Montana State University and an undergraduate degree in political science (minor in sociology and social work) from the Kwame Nkrumah University of Science and Technology (KNUST), Ghana."
+     
+   - name: Troy Dildine
+     image:
+     bio: "Troy Dildine is a PhD candidate in Neuroscience within the Graduate Partnership Program between the National Institutes of Health and Karolinska Institutet. His research aims for greater health equity by assessing pain expression and decision making and by providing interventions to improve pain assessment."
+     
+   - name: Regina Ebo
+     image: 
+     bio: "Regina Ebo is pursuing a PhD in psychology at UC Berkeley. Her work examines how cultural intersections impact emotion regulation, emotion beliefs, and empathy. Previously, she was the Lab Manager for the Early Childhood Cognition Lab at MIT and received her BA in cognitive science from Vassar College."
+     
+   - name: Janeria Easley
+     image:
+     bio: "Janeria Easley is an assistant professor of African American Studies at Emory University. Dr. Easley is trained as a sociologist and a demographer. She studies neighborhoods, wealth, and other racialized barriers to economic well-being."
+     
+   - name: Benjamin Fields
+     image:
+     bio: "Benjamin Njila Fields is a 2nd year PhD student at the University of California, Berkeley. His research interests are in the sociology of health and nutrition, focusing his studies on the United States and Cameroonian contexts."
+   
+   - name: Todd Hall
+     image:
+     bio: "Todd is a PhD student in education policy at the University of Virginia. He studies early childhood education and discipline in both early childhood and K-12 settings. Previously, Todd worked at J-PAL North America and the ed-tech startup, Empatico. He holds a BA in Political Economy from Williams College."
+     
+   - name: Nicole Jenkins
+     image:
+     bio: "Nicole is currently an Assistant Professor  in the Department of Sociology and Criminology at ​Howard University. She received her Doctoral degree from the University of Nevada Las Vegas in the Department of Sociology in 2020. She obtained an M.A. in Sociology in 2017 and B.A. in Sociology in 2015 from the University of Nevada Las Vegas. In 2013, she received an A.A. in Criminal Justice after serving six years of active duty in the United States Air Force as Military Police. She is a proud advocate for social justice and is committed to teaching with such emphasis in topics such as race and ethnic studies, sociology of poverty, problems of the black community, and research methods."
+     
+   - name: Erika Meza
+     image:
+     bio: "Erika is a doctoral student in Epidemiology and Translational Science at the University of California, San Francisco. Her work applies causal inference methods to evaluate social determinants of cognitive aging in older adults. Erika holds a BS in Applied Mathematics from Loyola Marymount University and an MPH from Columbia University."
+  
+   - name: Rashun Miles
+     image:
+     bio: "Rashun Miles is a PhD student in social welfare at the University of Mississippi. She has a MA from Columbia University and a MSW from the University of Michigan. His research integrates urban complex systems and feminist pedagogy (ethics of care) to address compassion fatigue among helping professionals."
     
+   - name: Yondu Mori
+     image:
+     bio: "Yondu is a PhD candidate in Communication Sciences and Disorders at McGill University. She completed a BSc in Psychology from the University of Alberta. She uses quantitative experimental methods and theories from cognitive and social psychology, and linguistics. She is interested in how applied research and data can inform societal decisions."
+   
+   - name: Ayorinde Ogunyiola
+     image:
+     bio: "Ayorinde Ogunyiola is a PhD candidate in Sociology at South Dakota State University. His research focuses on understanding the socio-ethical implication of emerging technologies in agriculture. He is also interested in macroeconomics, governance of artificial intelligence, technology ethics, climate change risk and resilience, and computational analysis. He holds a BS in economics from Ahmadu Bello University Zaria, Nigeria, an MS in Economics from University of Ibadan, Nigeria, an MS in Mathematics (finance) from Jomo Kenyatta University and Pan Africa University, Institute of Basics Science, Technology and Innovation, Kenya."
+   
+   - name: Ibukun Osunbunmi
+     image:
+     bio: "Ibukun Osunbunmi is a Ph.D. candidate at the department of Engineering Education, Utah State University, USA. He holds a B.Sc. and M.Sc. from the University of Ibadan, Nigeria. His current research uses mixed method approach in exploring college students’ experiences, their learning habits and factors that influences learning in their environment."
+
+   - name: Felix Owusu
+     image:
+     bio: "Felix Owusu is a doctoral candidate in Public Policy at Harvard University. Trained as an economist, Felix’s research blends data science, quasi-experimental research methods, and deep substantive knowledge to understand the application of law and bureaucratic processes in law enforcement agencies and their impacts across race and class. He has recently served as a Data Scientist and Fellow at The Lab @ DC and the Metropolitan Police Department."
+   
+   - name: Jeremy Prim
+     image:
+     bio: "Jeremy Prim is a current fifth year Sociology doctoral candidate at the University of California, Davis. His current program of research focuses in the areas of race, inequality, policing, and school discipline. His  dissertation research attempts to understand how mechanisms of the carceral state permeate schools and the relationship the carceral state has to educational outcomes. Jeremy previously received his BA in Sociology at Morehouse College in Atlanta, Georgia."
+  
+   - name: Ebony N. Russ 
+     image:
+     bio: "Ebony N. Russ is a Fellow at Harvard University within the Department of Molecular and Cellular Biology. She is a Professor of Sociology at George Washington University and the Director of the Rethinking DC Youth and Policing Program. Her research interests include decreasing cardiovascular diseases among marginalized populations, and uplifting the health narratives of oppressed individuals. She is passionate about empowering the next generation of scholar activists." 
+      
+   - name: Regis (R.A.) Saxton
+     image:
+     bio: "Regis (R.A.) Saxton is a doctoral student in sociology at George Mason University, interested in anti-Blackness and futurism. His dissertation examines antiracist chronopolitics on Twitter in the #blacklivesmatter movement. As a DuBoisian, he employs multiple methods to address the question of how we may create futures safe for black life." 
+   
+   - name: Marisa Smith
+     image:
+     bio: "Marisa Smith is an Assistant Professor in the Department of Advertising + Public Relations and the School of Journalism. Her work highlights that a critical component for understanding the sociopolitical implications of digital information environments involves examining its implications for racial attitudes. Her research investigates the effects of mediated messages on stereotype endorsement and policy support."
+    
+   - name: Sri Yeswanth (Yash) Tadimalla
+     image:
+     bio: "Sri Yeswanth (Yash) Tadimalla (He,Him,His) is a doctoral student at UNC Charlotte, under the Interdisciplinary track in the College of Computing and Informatics. His research  explores understanding various forms of inequities in the fields of computing and education through an intersectional lens. He is currently assisting various research projects under the Center for Education Innovation (CEI) in CCI and is also a member of the HCI Lab. He holds a B.Tech in Computer Engineering from Hyderabad Institute of Technology and Management. Prior to his advocacy work in the North Carolina Region, he served under various UN SDG related initiatives advocating for equitable education practices across multiple countries in South-east Asia." 
+     
+   - name: Maxine Van Doren
+     image: 
+     bio: "Maxine Van Doren is a licensed speech-language pathologist currently pursuing a PhD in Linguistics at the University of California, San Diego. Her dissertation examines the effects of language structure on voice quality in speakers with and without voice disorders. Clinically, she is interested in developing linguistically-informed diagnostic tools for culturally and linguistically diverse patients with voice disorders." 
+    
+   - name: Soazic Elise Wang Sonne
+     image:
+     bio: "Soazic Elise WANG SONNE is an Economist/Statistician (Young Professional) in the Social Development Global Practice of the World Bank Group  supporting the data analytics program on forced displacement. She is a PhD fellow in economics at the United Nations University (UNU) in the Netherlands and received the  UC Berkeley Leamer-Rosenthal Prize in the category of Emerging Researcher for her strong advocacy towards research transparency and reproducibility in Social Sciences."
+     
+   - name: Jinghui Zhang
+     image: 
+     bio: "Elaine Jinghui Zhang is a doctoral candidate in social psychology at Claremont Graduate University. She studies group behaviors such as motivations for social interaction, bi-partisan attitude formation and social movement. Her most recent work examined the role of national identity certainty in conspiracy theory beliefs and derogation of outgroup members."
+     
+     
 organizers:
   title: Organizer
   people:
@@ -92,10 +191,6 @@ organizers:
 teaching_assistants:
   title: Teaching Assistants 
   people:      
-    - name: Demetrius Murphy
-      image: /assets/images/demetriusMurphy.jpeg
-      bio: "Demetrius Murphy is a Ph.D. student in the Department of Sociology at  The University of Southern California. He earned his B.A. in Management Consulting and Africana Studies at the University of Notre Dame and his M.A. in Latin American Studies at Vanderbilt University. His research interests lie in the areas of race and ethnicity, economic sociology, and urban sociology, focusing mainly on the social meaning of the good life, the Black middle class, and (anti-)Blackness in Brazil and The United States. He has two on-going projects. One project investigates how the hashtag #BlackLivesMatter works in Brazil. His primary research project examines how perceptions of the good life are “made” and the social struggles in which particular visions become dominant in Black communities in Los Angeles."
-      website: https://dornsife.usc.edu/cf/soci/soci_student_display.cfm?Person_ID=1088889
       
 event_staff:
   title: Event Staff
