--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -120,8 +120,8 @@ participants:
      bio: "Todd is a PhD student in education policy at the University of Virginia. He studies early childhood education and discipline in both early childhood and K-12 settings. Previously, Todd worked at J-PAL North America and the ed-tech startup, Empatico. He holds a BA in Political Economy from Williams College."
      
    - name: Nicole Jenkins
-     image: 
-     bio: "Nicole is currently an Assistant Professor  in the Department of Sociology and Criminology at ​Howard University. She received her Doctoral degree from the University of Nevada Las Vegas in the Department of Sociology in 2020. She obtained an M.A. in Sociology in 2017 and B.A. in Sociology in 2015 from the University of Nevada Las Vegas. In 2013, she received an A.A. in Criminal Justice after serving six years of active duty in the United States Air Force as Military Police. She is a proud advocate for social justice and is committed to teaching with such emphasis in topics such as race and ethnic studies, sociology of poverty, problems of the black community, and research methods."
+     image: /assets/images/NicoleJenkins.jpeg
+     bio: "Nicole is currently an Assistant Professor  in the Department of Sociology and Criminology at Howard University. She received her Doctoral degree from the University of Nevada Las Vegas in the Department of Sociology in 2020. She obtained an M.A. in Sociology in 2017 and B.A. in Sociology in 2015 from the University of Nevada Las Vegas. In 2013, she received an A.A. in Criminal Justice after serving six years of active duty in the United States Air Force as Military Police. She is a proud advocate for social justice and is committed to teaching with such emphasis in topics such as race and ethnic studies, sociology of poverty, problems of the black community, and research methods."
      
    - name: Erika Meza
      image: /assets/images/ErikaMeza.jpg
