--- a/_data/2021/istanbul/schedule.yml
+++ b/_data/2021/istanbul/schedule.yml
@@ -12,11 +12,19 @@
     - name: "**Code Walkthrough Sessions**<br/> While working Pre-SICSS tasks, coding walkthrough sessions will be held on our tasks. Participants will have a chance to replicate the codes on their desk to improve their coding experience."
 
 - date: 2021-05-31
-  name: Code Walkthrough Sessions
+  name: Code Walkthrough on Task 1
   events: 
-      - name: "Task 1"
-        time: "20:00-23:00"
- 
+      - name: "Networking (Optional)"
+        time: "19:30-20:00"
+      - name: "Session 1"
+        time: "20:00-21:00"
+      - name: "Short Break"
+        time: "21:00-21:10"  
+      - name: "Session 2"
+        time: "21:10-22:00"
+      - name: "Networking (Optional)"
+        time: "22:00-22:30"       
+        
 - date: 2021-06-02
   name: Code Walkthrough Sessions
   events: 
