--- a/_data/2021/howard-mathematica/people.yml
+++ b/_data/2021/howard-mathematica/people.yml
@@ -13,12 +13,25 @@ faculty:
       
 opening:
   title: Opening Plenary Speaker
-      
+  people:
+    - name: Dr. Wayne A.I. Frederick
+      image: /assets/images/WayneAIFrederick.jpeg
+      bio: "Dr. Wayne A. I. Frederick was appointed the seventeenth president of Howard University in 2014. He previously served as Provost and Chief Academic Officer.  Most recently, the Howard University Board of Trustees selected Dr. Frederick to serve as the distinguished Charles R. Drew Professor of Surgery.  A distinguished scholar and administrator, Dr. Frederick has advanced Howard University's commitment to student opportunity, academic innovation, public service, and fiscal stability. Early in his tenure as president, Dr. Frederick pursued initiatives to streamline and strengthen university operations. He has overseen a series of reform efforts, including the expansion of academic offerings, establishing innovative programs to support student success and the modernization of university facilities. As an undergraduate, Dr. Frederick was admitted to Howard University's B.S./M.D. dual degree program. He completed the requirements for both degrees in six years, allowing him to earn his Bachelor of Science degree and his medical degree by the age of 22. He also earned a Master of Business Administration from Howard University's School of Business in 2011. Following his post-doctoral research and surgical oncology fellowships at the University of Texas MD Anderson Cancer Center, Dr. Frederick began his academic career as associate director of the Cancer Center at the University of Connecticut. Upon his return to Howard University, his academic positions included associate dean in the College of Medicine, division chief in the Department of Surgery, director of the Cancer Center and deputy provost for Health Sciences. Dr. Frederick is the author of numerous peer-reviewed articles, book chapters, abstracts, and editorials and is a widely recognized expert on disparities in healthcare and medical education. He continues to operate and also gives lectures to second-year medical students and surgical residents of Howard University's College of Medicine. His medical research focuses on narrowing racial, ethnic, and gender disparities in cancer-care outcomes, especially about gastrointestinal cancers. Dr. Frederick also devotes his time to writing and speaking on salient topics in higher education including the impact of Historically Black Colleges and Universities, campus intellectual diversity, the underrepresentation of African American men in medical school, and gender equity on college campuses." 
+      website: https://www2.howard.edu/about/president
+  
 closing:
   title: Closing Plenary Speaker 
+  people:
+    - name: Paul Decker
+      image: /assets/images/PaulDecker.jpeg
+      bio: "Paul Decker is a nationally recognized expert in policy research, data analytics, education, and labor policy. For three decades, he has been working to improve public well-being through the use of evidence to improve programs and policy. As president and CEO of Mathematica, Decker sets the company’s vision and strategy, oversees its operation and management, and shapes its values and standards. During his tenure as CEO, Decker has expanded and diversified the company’s operations and maintained its commitment to rigor and objectivity in new and evolving areas of research and analysis. Decker is Associate Editor for the Journal of Policy Analysis and Management and a past president of the Association for Public Policy Analysis and Management, where he also co-chaired the organization’s strategic planning committee and served on the policy council. He serves as a trustee and chair for the Committee for Economic Development’s Subcommittee on Workforce Issues. Decker writes and speaks regularly on trends in the policy research field, chairs the government relations committee of CEO Connection, and has testified before Congress, served as an expert adviser to both the U.S. and Canadian governments, and published widely in peer-reviewed journals."
+
+Decker holds a Ph.D. in economics from the Johns Hopkins University and serves as chair of development on the board of advisers of the Thomas Jefferson Public Policy Program at the College of William and Mary, his undergraduate alma mater.
+      website: https://www.mathematica.org/staff/paul-decker
     
 keynote:
   title: Keynote Speaker 
+  people:
     - name: Timnit Gebru, Ph.D
       image: /assets/images/TimnitGebru.jpg
       bio: "Timnit Gebru is a computer scientist whose work explores algorithmic bias and the ethical implications of data mining projects. Timnit is an advocate for diversity in technology and is the cofounder of Black in AI, a community of black researchers working in artificial intelligence. She seeks both to increase diversity in the field of AI and to reduce the negative impacts of racial bias in training data used for human-centric machine learning models."
