--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -3,7 +3,7 @@
 
 - date: 2021-06-13
   events:
-    - name: "TBD Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
+    - name: "3pm - 4:30pm Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
 
 - date: 2021-06-14
   name: "Introduction and Ethics"
