--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -41,7 +41,7 @@
 - date: 2021-06-21
   name: Group projects and/or SICSS Festival
   events:
-    - name: "10:00 - 4pm Coworking and workshops"
+    - name: "10:00 - 4pm Research 'speed dating', group formation, coworking and workshops"
 
 - date: 2021-06-22
   name: Group projects and/or SICSS Festival
