--- a/_data/2021/fgv-dapp-brazil/speakers.yml
+++ b/_data/2021/fgv-dapp-brazil/speakers.yml
@@ -44,3 +44,7 @@
   image: /assets/images/Natalia.jpg
   bio: "Natália Leão is the Head of the Research and Data Department at Gênero and Número, and a Ph.D Student in Sociology at Iesp-Uerj. She works on issues of  gender, race and class inequalities, based on data collection and analysis, since 2007."
   website: 
+  
+- name: Daniel Trielli
+  bio: "Daniel Trielli is a PhD student at the Media, Technology and Society program at Northwestern. He is researching computational journalism and how news reaches the public in our increasingly algorithmically-defined world."
+  image: /2019/chicago/images/trielli.jpg
