--- a/_data/2021/law/speakers.yml
+++ b/_data/2021/law/speakers.yml
@@ -1,1 +1,16 @@
+- name: Angela Dorrough
+- image: /assets/images/ AngelaDorrough.jpeg
+- bio: "Dr. Angela Dorrough is a Postdoctoral Researcher in Social Psychology at the University of Cologne. She started her academic career as a research fellow at the Max Planck Institute for Research on Collective Goods and finished her PhD at the University of Goettingen in 2017. Her research can be divided roughly into two main areas: One the one hand she investigates the determinants of cross-cultural cooperation behavior; on the other hand, her research is dedicated to discrimination (e.g., in selection processes) and potential interventions (e.g., quota rules) to reduce discrimination. For her research she combines methods of economics and psychology to test social psychological theories. Furthermore, she is committed to transparency and replicability in research and communicates these principles as part of her teaching activities."
+- website: http://soccco.uni-koeln.de/angela-dorrough.html
+
 - name:
+- image: 
+- bio: 
+- website: 
+
+- name:
+- image: 
+- bio: 
+- website: 
+
+ 
