--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -1,1 +1,24 @@
-- name:
+- name: Siyun Jiang
+  image: /assets/images/SiyunJiang.jpg
+  bio: "Siyun is a Ph.D. candidate in the Department of Government and an M.A. in Statistics student in the Department of Statistics and Data Science at the University of Texas at Austin. She broadly studies political economy and judicial politics with causal inference methods and text analysis. Her dissertation is on the impact of political centralization and local bureaucratic resistance in China’s judicial system. Before joining in UT, she lived and studied in Mainland China, Taiwan, Thailand and Hong Kong."
+  website: https://siyunjiang.weebly.com/
+  
+  - name:
+  image:
+  bio:
+  website:
+  
+  - name:
+  image:
+  bio:
+  website:
+  
+  - name:
+  image:
+  bio:
+  website:
+  
+  - name:
+  image:
+  bio:
+  website:
