--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -1,14 +1,14 @@
+- name: Giovanni De Gregorio
+  image: /assets/images/GiovanniDeGregorio.jpg
+  bio: "Giovanni De Gregorio is postdoctoral researcher working with the Programme in Comparative Media Law and Policy at the Centre for Socio-Legal Studies. Within the framework of the ERC ConflictNet project, his research focuses on content moderation and artificial intelligence; hate speech and disinformation in conflicts; digital policy in the global south. His research interest deals with constitutional law, human rights, Internet law, privacy and data protection law. He completed his PhD in Constitutional Law at the University of Milano-Bicocca. His doctoral study has investigated the rise of European digital constitutionalism as a reaction and strategy against the predominance of digital private normativities."
+  website: https://www.law.ox.ac.uk/people/giovanni-de-gregorio
+
 - name: Siyun Jiang
   image: /assets/images/SiyunJiang.jpg
   bio: "Siyun is a Ph.D. candidate in the Department of Government and an M.A. in Statistics student in the Department of Statistics and Data Science at the University of Texas at Austin. She broadly studies political economy and judicial politics with causal inference methods and text analysis. Her dissertation is on the impact of political centralization and local bureaucratic resistance in China’s judicial system. Before joining in UT, she lived and studied in Mainland China, Taiwan, Thailand and Hong Kong."
   website: https://siyunjiang.weebly.com/
-  
-  - name:
-  image:
-  bio:
-  website:
-  
-  - name:
+ 
+- name:
   image:
   bio:
   website:
