--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -2,21 +2,23 @@
   image: /assets/images/GiovanniDeGregorio.jpg
   bio: "Giovanni De Gregorio is postdoctoral researcher working with the Programme in Comparative Media Law and Policy at the Centre for Socio-Legal Studies. Within the framework of the ERC ConflictNet project, his research focuses on content moderation and artificial intelligence; hate speech and disinformation in conflicts; digital policy in the global south. His research interest deals with constitutional law, human rights, Internet law, privacy and data protection law. He completed his PhD in Constitutional Law at the University of Milano-Bicocca. His doctoral study has investigated the rise of European digital constitutionalism as a reaction and strategy against the predominance of digital private normativities."
   website: https://www.law.ox.ac.uk/people/giovanni-de-gregorio
+  
+- name: Ilya Ilin
+  image: /assets/images/IlyaIlin.jpg
+  bio: "Ilya is a Junior Research Fellow in IT Law and Ph.D. student of the School of Law at the Tartu University (Estonia). He holds a Master’s degree in Information Technology Law from the University of Tartu and a Specialist’s degree in Law from the St. Petersburg State Engineering and Economic University (Russia). His area of research concerns the legal aspects of Natural Language Processing (NLP) development. Within research, he explores the application of various NLP techniques and their components, such as speech and voice, in the information technology sphere from the perspective of intellectual property and data protection law. "
+  website: https://www.etis.ee/CV/Ilya_Ilin/eng
+
+- name: Noam Kolt
+  image: /assets/images/NoamKolt.jpg
+  bio: "Noam Kolt is a doctoral candidate at the University of Toronto Faculty of Law. His research focuses on contract law, computational text analysis, and the governance of artificial intelligence. Noam was appointed an inaugural Schwartz Reisman Institute for Technology and Society Graduate Fellow and held an Ethics of AI Graduate Research Fellowship at the University of Toronto Centre for Ethics. Noam’s scholarship has been published or is forthcoming in the Berkeley Technology Law Journal, Yale Law & Policy Review, International Journal of Constitutional Law, and Melbourne University Law Review."
+  website: https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=3448175
 
 - name: Siyun Jiang
   image: /assets/images/SiyunJiang.jpg
   bio: "Siyun is a Ph.D. candidate in the Department of Government and an M.A. in Statistics student in the Department of Statistics and Data Science at the University of Texas at Austin. She broadly studies political economy and judicial politics with causal inference methods and text analysis. Her dissertation is on the impact of political centralization and local bureaucratic resistance in China’s judicial system. Before joining in UT, she lived and studied in Mainland China, Taiwan, Thailand and Hong Kong."
   website: https://siyunjiang.weebly.com/
- 
-- name:
-  image:
-  bio:
-  website:
-  
-  - name:
-  image:
-  bio:
-  website:
+
+
   
   - name:
   image:
