--- a/_data/2021/law/participants.yml
+++ b/_data/2021/law/participants.yml
@@ -18,7 +18,14 @@
   bio: "Siyun is a Ph.D. candidate in the Department of Government and an M.A. in Statistics student in the Department of Statistics and Data Science at the University of Texas at Austin. She broadly studies political economy and judicial politics with causal inference methods and text analysis. Her dissertation is on the impact of political centralization and local bureaucratic resistance in China’s judicial system. Before joining in UT, she lived and studied in Mainland China, Taiwan, Thailand and Hong Kong."
   website: https://siyunjiang.weebly.com/
  
-  - name: Wu Hao
+- name: Wu Hao
   image: /assets/images/WuHao.png
   bio: "Wu Hao is a PhD student in the Department of Computing Science at the University of Aberdeen. His research focuses on automatising the justification process of the query result in an argumentation system and optimising the efficiency of related algorithms.  His interests also lie in functional programming and data analysis."
   website:
+  
+- name: Anna Sekuła
+  image: /assets/images/AnnaSekuła.jpg
+  bio: "Anna is a PhD candidate in Comparative Analysis of Institutions, Economics and Law at the University of Turin and Collegio Carlo Alberto, Italy. In her work she focuses on the dynamics of change in legal pluralism and studies developments in human and environmental rights litigation across jurisdictions. She is also interested in methodology and philosophy of law and economics." 
+  website: 
+
+[to be completed]
