--- a/_data/2021/law/speakers.yml
+++ b/_data/2021/law/speakers.yml
@@ -5,11 +5,5 @@
 
 - name: Gijs van Dijck
  image: /assets/images/GijsvanDijck.jpg
- bio: "Gijs integrates legal, empirical, and computational analysis in order to improve the description, application, understanding, and evaluation of the law. He has taught courses on tort law, contract law, property law, empirical legal research, and computational legal research. Gijs has published in top journals including the Journal of Empirical Legal Studies and the Oxford Journal of Legal Studies. He has been a speaker at various conferences, including ones at Oxford, Harvard, Yale, Duke and Cornell. He was a visiting scholar at Stanford University in 2011.
-
-Gijs is Professor of Private Law, (co-)director of the Maastricht Law and Tech Lab, Principal Investigator at Brightlands Institute for Smart Society (BISS), and researcher at M-EPLI."
- website: https://www.maastrichtuniversity.nl/gijs.vandijck
-
-
-
- 
+ bio: "Gijs integrates legal, empirical, and computational analysis in order to improve the description, application, understanding, and evaluation of the law. He has taught courses on tort law, contract law, property law, empirical legal research, and computational legal research. Gijs has published in top journals including the Journal of Empirical Legal Studies and the Oxford Journal of Legal Studies. He has been a speaker at various conferences, including ones at Oxford, Harvard, Yale, Duke and Cornell. He was a visiting scholar at Stanford University in 2011. Gijs is Professor of Private Law, (co-)director of the Maastricht Law and Tech Lab, Principal Investigator at Brightlands Institute for Smart Society (BISS), and researcher at M-EPLI."
+ website: https://www.maastrichtuniversity.nl/gijs.vandijck 
