--- a/_data/2021/hong_kong/schedule.yml
+++ b/_data/2021/hong_kong/schedule.yml
@@ -1,4 +1,4 @@
-- date: All times are in Hong Kong Time
+- date: All times are in Hong Kong Time; *Schedule is Tentative*
 
 - date: 2021-06-14
   name: Introduction and Ethics
