--- a/_data/2021/hong_kong/schedule.yml
+++ b/_data/2021/hong_kong/schedule.yml
@@ -2,6 +2,7 @@
 
 - date: 2021-06-14
   name: Introduction and Ethics
+  events:
     - name: "10:00 - 11:00 Meet-and-greet"
     - name: "11:15 - 12:15 Participant flash talks (encouraged)"
     - name: "12:30 - 1:30 Break"
